--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   weather_icons: ^2.0.2
   lint: ^1.5.1
   flutter_dotenv: ^2.1.0
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
