--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_dotenv: ^2.1.0
   http: ^0.12.2
   geolocator: ^5.3.0
+  flutter_spinkit: ^4.1.2+1
+  transparent_image: ^1.0.0
 
 dev_dependencies:
   flutter_test:
