--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   transparent_image: ^1.0.0
   provider: ^4.3.2+3
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
