--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   transparent_image: ^1.0.0
   provider: ^4.3.2+3
   intl: ^0.16.1
+  cached_network_image: ^2.4.1
 
 dev_dependencies:
   flutter_test:
