--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^4.3.2+3
   intl: ^0.16.1
   cached_network_image: ^2.4.1
+  ntp: ^1.0.7
 
 dev_dependencies:
   flutter_test:
