--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
   weather_icons: ^2.0.2
-  lint: ^1.5.1
-  flutter_dotenv: ^2.1.0
+  lint: ^1.5.1 # For best coding practices
+  flutter_dotenv: ^2.1.0 # For hiding API key
   http: ^0.12.2
-  geolocator: ^5.3.0
-  flutter_spinkit: ^4.1.2+1
+  geolocator: ^5.3.0 # Getting user coordinates
+  flutter_spinkit: ^4.1.2+1 # Special Loading Indicator
   transparent_image: ^1.0.0
   provider: ^4.3.2+3
-  intl: ^0.16.1
+  intl: ^0.16.1 # For Formatting Time
   cached_network_image: ^2.4.1
-  ntp: ^1.0.7
+  ntp: ^1.0.7 # For Real Time
 
 dev_dependencies:
   flutter_test:
