--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   cached_network_image: ^2.4.1
   ntp: ^1.0.7 # For Real Time
   rflutter_alert: ^1.1.0 # Alert Dialog
+  firebase_core: ^0.5.3 # Needed for firebase
+  cloud_firestore: ^0.14.4 # Access firestore
+  firebase_auth: ^0.18.4+1 # Authentication
 
 dev_dependencies:
   flutter_test:
