--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
+**/android/key.properties
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
