--- a/weather/pubspec.yaml
+++ b/weather/pubspec.yaml
@@ -1,8 +1,8 @@
-name: weather_app
-description: A new Flutter application.
+name: weather
+description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
+# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
@@ -18,37 +18,33 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
+# Dependencies specify other packages that your package needs in order to work.
+# To automatically upgrade your package dependencies to the latest versions
+# consider running `flutter pub upgrade --major-versions`. Alternatively,
+# dependencies can be manually updated by changing the version numbers below to
+# the latest version available on pub.dev. To see which dependencies have newer
+# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^1.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.1
-  weather_icons: ^2.0.2 # Unique weather icons
-  lint: ^1.5.1 # For best coding practices
-  flutter_dotenv: ^2.1.0 # For hiding API key
-  http: ^0.12.2 # HTTP calls
-  geolocator: ^5.3.0 # Getting user coordinates
-  flutter_spinkit: ^4.1.2+1 # Special Loading Indicator
-  transparent_image: ^1.0.0
-  provider: ^4.3.2+3 # State management
-  intl: ^0.16.1 # For Formatting Time
-  cached_network_image: ^2.4.1
-  ntp: ^1.0.7 # For Real Time
-  rflutter_alert: ^1.1.0 # Alert Dialog
-  firebase_core: ^0.5.3 # Needed for firebase
-  cloud_firestore: ^0.14.4 # Access firestore
-  firebase_auth: ^0.18.4+1 # Authentication
-  change_app_package_name: 1.1.0
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
+  flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,8 +61,6 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-  assets:
-    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
